Change height of user, shrink buttons on mobile, media query fixes

--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,40 @@ body {
 .buttons > button.activated > span {
   color: #fff;
 }
+
+@media only screen and (max-width: 580px) {
+  .buttons img {
+    max-width: 25px;
+    max-height: 25px;
+  }
+  .buttons > button > span {
+    font-size: 16px;
+    position: relative;
+    bottom: 16px;
+    font-family: 'Montserrat', sans-serif;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .buttons img {
+    max-width: 25px;
+    max-height: 25px;
+  }
+  .buttons > button > span {
+    font-size: 14px;
+    position: relative;
+    bottom: 14px;
+    padding-right: 6px;
+    font-family: 'Montserrat', sans-serif;
+  }
+}
+
+@media only screen and (max-width: 395px) {
+  .buttons > :first-child {
+    margin-right: 0;
+    margin-bottom: 6px;
+  }
+  .buttons {
+    bottom: 80px;
+  }
+}
